--- a/src/components/Link.astro
+++ b/src/components/Link.astro
@@ -1,13 +1,13 @@
 ---
 interface Props {
-  href: string
-  text: string
+  href: string;
+  text: string;
 }
 
-const { href, text } = Astro.props
+const { href, text } = Astro.props;
 ---
 
-<a href={href} target='_blank'>{text}</a>
+<a href={href} target="_blank">{text}</a>
 
 <style>
   a {
