--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,10 +13,18 @@ const { title } = Astro.props;
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
-    <meta name="description" content="まなさすのらくがき倉庫" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" href="/favicon.ico" sizes="32x32" />
+    <link rel="icon" href="/icon.svg" type="image/svg+xml" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+    <link rel="manifest" href="/manifest.webmanifest" />
     <meta name="generator" content={Astro.generator} />
+    <meta name="description" content="まなさすのらくがき倉庫" />
+    <meta property="og:site_name" content="北極の らくがき倉庫" />
+    <meta property="og:title" content={title} />
+    <meta property="og:url" content="https://doodle.manasas.dev" />
+    <meta property="og:description" content="まなさすのらくがき倉庫" />
+    <!-- <meta property="og:image" content="https://manasas.dev/ogp.png" /> -->
     <title>{title}</title>
   </head>
   <body>
