--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,12 +1,12 @@
 ---
-import { Image, Picture } from "astro:assets";
-import headerImage from "../images/header.png";
+import { Image } from 'astro:assets'
+import headerImage from '../images/header.png'
 
 interface Props {
-  title: string;
+  title: string
 }
 
-const { title } = Astro.props;
+const { title } = Astro.props
 ---
 
 <!doctype html>
