--- a/src/components/Link.astro
+++ b/src/components/Link.astro
@@ -1,10 +1,10 @@
 ---
 interface Props {
-  href: string;
-  text: string;
+  href: string
+  text: string
 }
 
-const { href, text } = Astro.props;
+const { href, text } = Astro.props
 ---
 
 <a href={href} target="_blank">{text}</a>
