トップ画像変更ついでに全体的に色変更

--- a/src/components/Link.astro
+++ b/src/components/Link.astro
@@ -14,9 +14,10 @@ const { href, text } = Astro.props
     color: #fff;
     text-decoration: none;
     display: block;
-    padding: 8px 12px;
-    background: #44617b;
+    padding: 8px 24px;
+    background: #d83178;
     width: fit-content;
     border-radius: 12px;
+    border: 1px rgba(255, 255, 255, 0.5) solid;
   }
 </style>
