--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -58,7 +58,7 @@ const { title } = Astro.props
   }
   html {
     font-family: system-ui, sans-serif;
-    background: #41413f;
+    background: #f5dbe6;
     background-size: 224px;
     caret-color: transparent;
     display: flex;
@@ -71,7 +71,7 @@ const { title } = Astro.props
     width: 900px;
     max-width: calc(100% - 40px * 2);
     padding: 0 40px;
-    background: #0f0f0e;
+    background: #db90b0;
   }
   body::-webkit-scrollbar {
     display: none;
