--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -46,13 +46,12 @@ import { otherList } from '../images/other/list.ts'
 <style lang="scss">
   main {
     width: 100%;
-    color: white;
+    color: rgb(255, 255, 255);
     font-size: 20px;
     line-height: 1.6;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    background: #0f0f0e;
   }
 
   .buttonArea {
