デザインをもう少し調整、文字と色の差がしっかりするように

--- a/src/components/ImageList.astro
+++ b/src/components/ImageList.astro
@@ -75,10 +75,14 @@ const mappedItems = list.map((item) => {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    img {
+      border: 2px solid rgba(196, 66, 122, 0.2);
+    }
     .alt {
       padding-top: 0.5rem;
       text-align: center;
       width: 280px;
+      height: 2.2rem;
     }
   }
 </style>
