--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,7 @@
 ---
 import { Image } from 'astro:assets'
 import headerImage from '../images/header.png'
+import Link from '../components/Link.astro'
 
 interface Props {
   title: string
@@ -36,6 +37,10 @@ const { title } = Astro.props
           class="headerImage"
         />
       </h1>
+      <div class="buttonArea">
+        <Link href="https://manasas.dev/" text="本館" />
+        <Link href="https://novel.manasas.dev/" text="小説館" />
+      </div>
     </header>
     <slot />
     <footer>
@@ -45,47 +50,24 @@ const { title } = Astro.props
 </html>
 
 <style is:global lang="scss">
-  :root {
-    --accent: 136, 58, 234;
-    --accent-light: 224, 204, 250;
-    --accent-dark: 49, 10, 101;
-    --accent-gradient: linear-gradient(
-      45deg,
-      rgb(var(--accent)),
-      rgb(var(--accent-light)) 30%,
-      white 60%
-    );
-  }
   html {
     font-family: system-ui, sans-serif;
-    background: #f5dbe6;
+    background: #db90b0;
     background-size: 224px;
     caret-color: transparent;
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
+    font-size: 20px;
+    line-height: 1.6;
   }
   body {
     margin: 0;
-    width: 900px;
-    max-width: calc(100% - 40px * 2);
-    padding: 0 40px;
-    background: #db90b0;
+    width: 100%;
   }
   body::-webkit-scrollbar {
     display: none;
-  }
-  code {
-    font-family:
-      Menlo,
-      Monaco,
-      Lucida Console,
-      Liberation Mono,
-      DejaVu Sans Mono,
-      Bitstream Vera Sans Mono,
-      Courier New,
-      monospace;
   }
   h2 {
     margin: 24px 0 0 0;
@@ -97,15 +79,22 @@ const { title } = Astro.props
   header {
     display: flex;
     justify-content: center;
+    align-items: center;
+    flex-direction: column;
     h1 {
       margin: 0;
       width: fit-content;
       img {
-        margin: 0 auto;
-        margin-bottom: 16px;
+        margin: 1rem 0;
         width: 100%;
         height: auto;
       }
+    }
+    .buttonArea {
+      display: flex;
+      justify-content: center;
+      gap: 40px;
+      margin-bottom: 1.5rem;
     }
   }
   footer {
@@ -113,7 +102,7 @@ const { title } = Astro.props
     text-align: center;
     padding: 24px 0;
     a {
-      color: white;
+      color: #fff;
       text-decoration: none;
     }
   }
