--- a/src/components/ImageList.astro
+++ b/src/components/ImageList.astro
@@ -1,6 +1,7 @@
 ---
 import { Image } from 'astro:assets'
 import type { ImageListItem } from '../type/images'
+import ImgNew from './new.svg'
 
 interface Props {
   list: ImageListItem[]
@@ -44,6 +45,7 @@ const mappedItems = list.map((item) => {
       format: item.image.format,
     } as ImageMetadata,
     alt: item.alt,
+    new: item.new,
   }
 })
 ---
@@ -53,7 +55,8 @@ const mappedItems = list.map((item) => {
   {
     mappedItems.map((item) => (
       <li>
-        <Image src={item.image} alt={item.alt} class="js-content" />
+        <Image src={item.image} alt={item.alt} class="js-content mainImage" />
+        {item.new && <Image class="new" src={ImgNew} alt="new" width={40} />}
         <div class="alt">{item.alt}</div>
       </li>
     ))
@@ -75,14 +78,17 @@ const mappedItems = list.map((item) => {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    img {
+    .mainImage {
       border: 2px solid rgba(196, 66, 122, 0.2);
     }
     .alt {
-      padding-top: 0.5rem;
+      padding-top: 8px;
       text-align: center;
       width: 280px;
       height: 2.2rem;
+    }
+    .new {
+      padding-top: 8px;
     }
   }
 </style>
