--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,6 +9,7 @@ import { otherList } from '../images/other/list.ts'
 <Layout title="北極の らくがき倉庫">
   <main>
     <div>
+      <p>2024/11/18: その他の過去絵 3点追加</p>
       <p>2024/11/17: その他の過去絵 5点追加</p>
     </div>
     <ImageList list={azarashiList} title="あざらし" />
