--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -103,4 +103,11 @@ const { title } = Astro.props
       text-decoration: none;
     }
   }
+  a {
+    color: #990033;
+    text-decoration: underline;
+    &:hover {
+      opacity: 0.5;
+    }
+  }
 </style>
