--- a/src/components/ImageList.astro
+++ b/src/components/ImageList.astro
@@ -56,7 +56,12 @@ const mappedItems = list.map((item) => {
   {
     mappedItems.map((item) => (
       <li>
-        <Image src={item.image} alt={item.alt} class="js-content mainImage" />
+        <Image
+          src={item.image}
+          alt={item.alt}
+          class="js-content mainImage"
+          loading="lazy"
+        />
         {item.new && <Image class="new" src={ImgNew} alt="new" width={40} />}
         <div class="alt">{item.alt}</div>
       </li>
