--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -35,6 +35,7 @@ const { title } = Astro.props
           src={headerImage}
           alt="北極の らくがき倉庫"
           class="headerImage"
+          loading="lazy"
         />
       </h1>
       <div class="buttonArea">
