--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -95,9 +95,11 @@ const { title } = Astro.props
     }
   }
   footer {
+    margin-top: 64px;
+    font-size: 0.8rem;
     width: 100%;
     text-align: center;
-    padding: 24px 0;
+    background-color: #c4427a;
     a {
       color: #fff;
       text-decoration: none;
