--- a/src/components/ImageList.astro
+++ b/src/components/ImageList.astro
@@ -61,8 +61,8 @@ const mappedItems = list.map((item) => {
           alt=""
           class="js-content mainImage"
           loading="lazy"
-          widths={[300, 600]}
-          sizes={`(max-width: ${ITEM_BOX_SIZE}px) 100vw, ${ITEM_BOX_SIZE}px`}
+          widths={[300]}
+          sizes={`${ITEM_BOX_SIZE}px`}
         />
         {item.new && <Image class="new" src={ImgNew} alt="new" width={40} />}
         <div class="alt">{item.alt}</div>
