トップ画像の読み込みタイミングを調整

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -35,6 +35,8 @@ const { title } = Astro.props
           src={headerImage}
           alt="北極の らくがき倉庫"
           class="headerImage"
+          loading="eager"
+          decoding="sync"
         />
       </h1>
       <div class="buttonArea">
