画像サイズを調整

--- a/src/components/ImageList.astro
+++ b/src/components/ImageList.astro
@@ -61,7 +61,7 @@ const mappedItems = list.map((item) => {
           alt=""
           class="js-content mainImage"
           loading="lazy"
-          widths={[300]}
+          widths={[ITEM_BOX_SIZE]}
           sizes={`${ITEM_BOX_SIZE}px`}
         />
         {item.new && <Image class="new" src={ImgNew} alt="new" width={40} />}
