画像サイズの警告がどうしても消えないので小さめにしてみる

--- a/src/components/ImageList.astro
+++ b/src/components/ImageList.astro
@@ -61,8 +61,8 @@ const mappedItems = list.map((item) => {
           alt=""
           class="js-content mainImage"
           loading="lazy"
-          widths={[ITEM_BOX_SIZE]}
-          sizes={`${ITEM_BOX_SIZE}px`}
+          widths={[270]}
+          sizes={`270px`}
         />
         {item.new && <Image class="new" src={ImgNew} alt="new" width={40} />}
         <div class="alt">{item.alt}</div>
