--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,14 +24,23 @@ import { otherList } from '../images/other/list.ts'
   images.forEach((image) => {
     image.addEventListener('click', () => {
       const div = document.createElement('div')
-      div.classList.add('js-image-modal')
+      div.classList.add('js-imageModal')
+
+      const modalContetElement = document.createElement('div')
+      modalContetElement.classList.add('js-imageModalContent')
 
       const img = document.createElement('img')
       img.src = image.getAttribute('src') as string
-      img.classList.add('js-image-in-modal')
+      img.classList.add('js-imageInModal')
+
+      const p = document.createElement('p')
+      p.textContent = image.getAttribute('alt') as string
+      p.classList.add('js-descpriontInModal')
 
       document.body.style.overflow = 'hidden'
-      div.appendChild(img)
+      div.appendChild(modalContetElement)
+      modalContetElement.appendChild(img)
+      modalContetElement.appendChild(p)
       document.body.appendChild(div)
 
       div.addEventListener('click', () => {
@@ -84,7 +93,7 @@ import { otherList } from '../images/other/list.ts'
 </style>
 
 <style is:global lang="scss">
-  .js-image-modal {
+  .js-imageModal {
     position: fixed;
     top: 0;
     left: 0;
@@ -93,14 +102,27 @@ import { otherList } from '../images/other/list.ts'
     background: rgba(0, 0, 0, 0.8);
     z-index: 1000;
     cursor: zoom-out;
-    .js-image-in-modal {
+    .js-imageModalContent {
       position: fixed;
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
-      max-width: 80%;
-      max-height: 80%;
+      width: 80%;
+      height: 80%;
       object-fit: contain;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      .js-imageInModal {
+        height: 90%;
+        width: 100%;
+        object-fit: contain;
+      }
+      .js-descpriontInModal {
+        color: white;
+        text-align: center;
+      }
     }
   }
 </style>
