--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -31,25 +31,90 @@ const { title } = Astro.props
   <body>
     <header>
       <h1>
-        <Image
-          src={headerImage}
-          alt="北極の らくがき倉庫"
-          class="headerImage"
-          loading="eager"
-          decoding="sync"
-        />
+        <a href="/">
+          <Image
+            src={headerImage}
+            alt="北極の らくがき倉庫"
+            class="headerImage"
+            loading="eager"
+            decoding="sync"
+          />
+        </a>
       </h1>
       <div class="buttonArea">
         <Link href="https://manasas.dev/" text="本館" />
         <Link href="https://novel.manasas.dev/" text="小説館" />
       </div>
     </header>
-    <slot />
+    <main>
+      <slot />
+    </main>
     <footer>
       <a href="https://manasas.dev/" rel="me">© 2024 manasas</a>
     </footer>
   </body>
 </html>
+
+<script>
+  const images = document.querySelectorAll('.js-content')
+  images.forEach((image) => {
+    image.addEventListener('click', () => {
+      const div = document.createElement('div')
+      div.classList.add('js-imageModal')
+
+      const modalContetElement = document.createElement('div')
+      modalContetElement.classList.add('js-imageModalContent')
+
+      const img = document.createElement('img')
+      img.src = image.getAttribute('src') as string
+      img.classList.add('js-imageInModal')
+
+      const p = document.createElement('p')
+      p.textContent = image.getAttribute('alt') as string
+      p.classList.add('js-descpriontInModal')
+
+      document.body.style.overflow = 'hidden'
+      div.appendChild(modalContetElement)
+      modalContetElement.appendChild(img)
+      modalContetElement.appendChild(p)
+      document.body.appendChild(div)
+
+      div.addEventListener('click', () => {
+        div.remove()
+        document.body.style.overflow = 'scroll'
+      })
+    })
+  })
+  const gotop = document.querySelector('.js-gotop')
+  if (gotop) {
+    window.addEventListener('scroll', () => {
+      if (window.scrollY > 100) {
+        gotop.classList.remove('hidden')
+      } else {
+        gotop.classList.add('hidden')
+      }
+    })
+    gotop.addEventListener('click', () => {
+      window.scrollTo({ top: 0, behavior: 'smooth' })
+    })
+  }
+</script>
+
+<style lang="scss">
+  main {
+    width: 900px;
+    max-width: calc(100% - 40px * 2);
+    // 全体 - ヘッダ - フッタ - フッタ上余白
+    min-height: calc(100vh - 255px - 26px - 64px);
+    margin: 0 auto;
+    padding: 0 40px;
+    background: #fff;
+    color: #c4427a;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+  }
+</style>
 
 <style is:global lang="scss">
   html {
@@ -112,6 +177,55 @@ const { title } = Astro.props
     text-decoration: underline;
     &:hover {
       opacity: 0.5;
+    }
+  }
+</style>
+
+<style is:global lang="scss">
+  .js-imageModal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.8);
+    z-index: 1000;
+    cursor: zoom-out;
+    .js-imageModalContent {
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: 80%;
+      height: 80%;
+      object-fit: contain;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      .js-imageInModal {
+        height: 90%;
+        width: 100%;
+        object-fit: contain;
+      }
+      .js-descpriontInModal {
+        color: white;
+        text-align: center;
+      }
+    }
+  }
+  .gotop {
+    position: fixed;
+    bottom: 0px;
+    right: 0px;
+    background: #c4427a;
+    color: #fff;
+    padding: 12px 4px 4px 12px;
+    cursor: pointer;
+    border-radius: 20px 0 0;
+    transition: right 0.3s;
+    &.hidden {
+      right: -50px;
     }
   }
 </style>
