--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,6 @@
 ---
 import { Image } from 'astro:assets'
-import headerImage from '../images/header.png'
+import headerSvg from '../images/header.svg'
 import Link from '../components/Link.astro'
 
 interface Props {
@@ -25,7 +25,7 @@ const { title } = Astro.props
     <meta property="og:title" content={title} />
     <meta property="og:url" content="https://doodle.manasas.dev" />
     <meta property="og:description" content="まなさすのらくがき倉庫" />
-    <!-- <meta property="og:image" content="https://manasas.dev/ogp.png" /> -->
+    <meta property="og:image" content="https://manasas.dev/ogp.png" />
     <title>{title}</title>
   </head>
   <body>
@@ -33,9 +33,8 @@ const { title } = Astro.props
       <h1>
         <a href="/">
           <Image
-            src={headerImage}
+            src={headerSvg}
             alt="北極の らくがき倉庫"
-            class="headerImage"
             loading="eager"
             decoding="sync"
           />
@@ -103,23 +102,31 @@ const { title } = Astro.props
 <style lang="scss">
   main {
     width: 900px;
-    max-width: calc(100% - 40px * 2);
+    max-width: calc(100% - 24px * 2);
     // 全体 - ヘッダ - フッタ - フッタ上余白
     min-height: calc(100vh - 255px - 26px - 64px);
+    @media screen and (max-width: 900px) {
+      // 全体 - ヘッダ小さめ - フッタ
+      min-height: calc(100vh - 100px - 26px);
+    }
     margin: 0 auto;
-    padding: 0 40px;
+    padding: 0 24px;
     background: #fff;
     color: #c4427a;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+    @media screen and (max-width: 900px) {
+      max-width: calc(100% - 16px * 2);
+      padding: 0 16px;
+    }
   }
 </style>
 
 <style is:global lang="scss">
   html {
     font-family: system-ui, sans-serif;
-    background: #db90b0;
+    background: #ff94c2;
     background-size: 224px;
     caret-color: transparent;
     display: flex;
@@ -170,6 +177,9 @@ const { title } = Astro.props
     a {
       color: #fff;
       text-decoration: none;
+    }
+    @media screen and (max-width: 900px) {
+      margin-top: 0;
     }
   }
   a {
