--- a/src/components/feature/History.astro
+++ b/src/components/feature/History.astro
@@ -1,7 +1,17 @@
 <h2>更新履歴</h2>
 <ul>
-  <li>2024/11/18: その他の過去絵 3点追加</li>
-  <li>2024/11/17: その他の過去絵 5点追加</li>
+  <li>
+    <span class="date">2024/12/14</span>
+    <a href="./other">その他の過去絵</a> 4点追加
+  </li>
+  <li>
+    <span class="date">2024/11/18</span>
+    <a href="./other">その他の過去絵</a> 3点追加
+  </li>
+  <li>
+    <span class="date">2024/11/17</span>
+    <a href="./other">その他の過去絵</a> 5点追加
+  </li>
 </ul>
 
 <style lang="scss">
@@ -12,6 +22,12 @@
       content: '-';
       display: block;
       margin-right: 12px;
+    }
+    .date {
+      margin-right: 24px;
+    }
+    a {
+      margin-right: 8px;
     }
   }
 </style>
