画像がモザモザだったので修正

--- a/src/components/ImageList.astro
+++ b/src/components/ImageList.astro
@@ -61,8 +61,8 @@ const mappedItems = list.map((item) => {
           alt={item.alt}
           class="js-content mainImage"
           loading="lazy"
-          widths={[80]}
-          sizes={`80px`}
+          width={1200}
+          height={1200}
         />
         {item.new && <Image class="new" src={ImgNew} alt="new" width={40} />}
       </li>
