過去絵一点移動

--- a/src/components/feature/History.astro
+++ b/src/components/feature/History.astro
@@ -1,6 +1,10 @@
 <h2>更新履歴</h2>
 <ul>
   <li>
+    <span class="date">2025/03/25</span>
+    <a href="./other">その他の過去絵</a> 1点追加
+  </li>
+  <li>
     <span class="date">2024/12/14</span>
     <a href="./other">その他の過去絵</a> 4点追加
   </li>
